--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: #f5f5f5ab;
+            background-color: #ffffff;
             z-index: 9999;
             transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
         }
