--- a/css/styles.css
+++ b/css/styles.css
@@ -797,6 +797,8 @@
             
         }
         .apply-btn::after{
+            content: '';
+            
 
         }
         .apply-btn:hover {
