--- a/css/styles.css
+++ b/css/styles.css
@@ -324,8 +324,8 @@
         }
 
         .nav-link:hover {
-            background: #fcf6bd;
-            border: #e4c1f9 4px solid;
+            /* background: #fcf6bd;
+            border: #e4c1f9 4px solid; */
             transform: translateY(-2px);
             opacity: 1;
             visibility: visible;
@@ -828,8 +828,14 @@
         }
         .apply-btn::after{
             content: '';
-            
-
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            width: 0;
+            height: 3px;
+            background: #0000004f;
+            transition: all 0.3s ease;
+            transform: translateX(-50%);
         }
         .apply-btn:hover {
             background: #fcf6bd;
@@ -951,6 +957,38 @@
 
         .gallery-button:hover #arrow-horizontal {
             transform: translateX(5px);
+        }
+                .gallery-nav {
+            display: flex;
+            justify-content: center;
+            gap: 1rem;
+            margin-bottom: 3rem;
+            flex-wrap: wrap;
+        }
+
+        .nav-btn-gallery {
+            color: rgb(0, 0, 0);
+            border: #e4c1f9 4px solid;
+            border-radius: 15px;
+            padding: 0 16px;
+            height: 40px;
+            font-size: 14px;
+            font-weight: 700;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .nav-btn-gallery:hover,
+        .nav-btn-gallery.active {
+            background: #fcf6bd;
+            border: #e4c1f9 4px solid;
+            display: flex;
+            align-items: center;
+            padding: 0 16px;        
+            color: rgb(0, 0, 0);
+            transform: translateY(-2px);
+            opacity: 1;
+            visibility: visible;
         }
 
         /* CTA Section */
